# test-repo

WinFspLinuxMegaDriver/: CMakeLists.txt  build_and_sign.sh  readme.md
WinFspLinuxMegaDriver/src/: main.cpp
WinFspLinuxMegaDriver/src/resources/: app.manifest  resources.rc
codycross_ultimate/: codycross_adb_backup.sh  codycross_ultimate.sh  readme.md
lo_msoffice_build/: readme.md  transform.sh
msoffice_theme/: Makefile  Makefile.original  description.xml  readme.md
msoffice_theme/Macros/: ThemeDialog.xdl  ThemeSwitcher.xba  script.xlb
msoffice_theme/registry/data/org/openoffice/: View.xcu
msoffice_theme/registry/data/org/openoffice/Office/: Accelerators.xcu  Addons.xcu  Common.xcu  Jobs.xcu  UI.xcu
office/: build_all_icons.sh
pdfmrc-project/: build_pdfmrc.sh  main.cpp  manifest.xml  readme.md  resources.rc
rdp_monolith/: CMakeLists.txt  build.sh  main.cpp  readme.md  resource.rc  service_engine.hpp
